--- a/packages/tailwind-config/shared-styles.css
+++ b/packages/tailwind-config/shared-styles.css
@@ -4,4 +4,15 @@
   --color-blue-1000: #2a8af6;
   --color-purple-1000: #a853ba;
   --color-red-1000: #e92a67;
+
+  --color-nuevo-1: #ffd6e0;
+  --color-nuevo-2: #fff5ba;
+  --color-nuevo-3: #b5ead7;
+  --color-nuevo-4: #c7ceea;
+  --color-nuevo-5: #ffdfba;
+  --color-nuevo-6: #bae1ff;
+  --color-nuevo-7: #e2f0cb;
+  --color-nuevo-8: #f1c0e8;
+  --color-nuevo-9: #f9e2af;
+  --color-nuevo-10: #d4f0f0;
 }
