fix(ui): add new tsbuild to avoid building storybook stories

--- a/packages/tailwind-config/shared-styles.css
+++ b/packages/tailwind-config/shared-styles.css
@@ -171,3 +171,6 @@
     cursor: pointer;
   }
 }
+
+/* -------------------------------------------- IMPORTANT TODO -------------------------------------------- */
+/* ADD custom fonts, sizes, shadows, colors HERE. DISABLE FROM TW, NATIVE COLORS AND FONT STYLES LIKE TEXT- FONT-BOLD, TO AVOID UNNECESARY STYLES */
