--- a/packages/tailwind-config/shared-styles.css
+++ b/packages/tailwind-config/shared-styles.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* Especifica dónde buscar clases para no purgarlas */
+@source "../../packages/ui/src/**/*.{js,ts,jsx,tsx}";
+@source "../../apps/*/src/**/*.{js,ts,jsx,tsx}";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
